force-app/main/default/objects/cdcpc__RD_Disc_Types__c/cdcpc__RD_Disc_Types__c.object-meta.xml
<CustomObject>
    <label>RD Disc Types</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>RD Disc Type List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RD Disc Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>