force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__CEMark__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CEMark__c</fullName>
    <label>CEMark</label>
    <length>80</length>
    <type>Text</type>
</CustomField>