force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__Composite__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Composite__c</fullName>
    <label>Composite</label>
    <length>80</length>
    <type>Text</type>
</CustomField>