force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__DefMfgRngType__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DefMfgRngType__c</fullName>
    <label>DefMfgRngType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>