force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__Eleven_Sixteen__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Eleven_Sixteen__c</fullName>
    <label>Eleven_Sixteen</label>
    <length>80</length>
    <type>Text</type>
</CustomField>