force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__GoodForVac__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GoodForVac__c</fullName>
    <label>GoodForVac</label>
    <length>80</length>
    <type>Text</type>
</CustomField>