force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__Media__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Media__c</fullName>
    <label>Media</label>
    <length>80</length>
    <type>Text</type>
</CustomField>