force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__MfgDataSearchGroup__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MfgDataSearchGroup__c</fullName>
    <label>MfgDataSearchGroup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>