force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__MfgDataTemplate__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MfgDataTemplate__c</fullName>
    <label>MfgDataTemplate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>