force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__NonFragDesign__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NonFragDesign__c</fullName>
    <label>NonFragDesign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>