force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__OPtoBpRatio__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OPtoBpRatio__c</fullName>
    <label>OPtoBpRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>