force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__Product__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Product__c</fullName>
    <label>Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>