force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__ProductDescr1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ProductDescr1__c</fullName>
    <label>ProductDescr1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>