force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__RangeComparison__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RangeComparison__c</fullName>
    <label>RangeComparison</label>
    <length>80</length>
    <type>Text</type>
</CustomField>