force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__ShopRngMinMax__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ShopRngMinMax__c</fullName>
    <label>ShopRngMinMax</label>
    <length>80</length>
    <type>Text</type>
</CustomField>