force-app/main/default/objects/cdcpc__RD_Disc_Types__c/fields/cdcpc__STTSFlag__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__STTSFlag__c</fullName>
    <label>STTSFlag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>