force-app/main/default/objects/cdcpc__RD_Disc_Types__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__BidirFlag__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>CAL</value>
    </filters>
    <label>All</label>
</ListView>